version/0.23/_sources/api/solver/_autosummary/settings/uds_bc.rst.txt
:orphan:

.. _uds_bc:

uds_bc
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.uds_bc.uds_bc
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`discrete_boundary_condition_child <discrete_boundary_condition_child>`


.. rubric:: Included in:

==================   =======================

Parent                               Summary

==================   =======================
:ref:`uds <uds_1>`       Help not available.

==================   =======================

