version/0.27/_sources/api/solver/_autosummary/settings/uds_bc.rst.txt
:orphan:

.. _uds_bc:

uds_bc
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.uds_bc
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`uds_bc_child <uds_bc_child>`


.. rubric:: Included in:

====================   =====================================================

Parent                                                               Summary

====================   =====================================================
:ref:`uds <uds>`           Allows to change UDS model variables or settings.

:ref:`uds_2 <uds_2>`       Allows to change uds model variables or settings.

====================   =====================================================

